--- a/composer.json
+++ b/composer.json
@@ -8,12 +8,13 @@
         }
     },
     "require": {
-        "php": ">= 7.1",
+        "php": ">= 8.1",
         "ext-json": "*",
         "guzzlehttp/guzzle": "~7.0"
     },
     "require-dev": {
-        "squizlabs/php_codesniffer": "3.*"
+        "squizlabs/php_codesniffer": "3.*",
+        "phpunit/phpunit": "^9.5"
     },
     "config": {
         "bin-dir": "bin",
