--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,7 @@
         "guzzlehttp/guzzle": "~7.0"
     },
     "require-dev": {
-        "squizlabs/php_codesniffer": "3.*",
-        "phpunit/phpunit": "^9.5"
+        "squizlabs/php_codesniffer": "3.*"
     },
     "config": {
         "bin-dir": "bin",
